Criação de cabeçalho responsivo

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 html {
     height: 100%;
+    background-color: #e7eef1;
 
     body {
         margin: 0;
         padding: 0;
         height: 100%;
-
+        font-family: "Lato", sans-serif;
     }
 }
