--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
+
 html {
     height: 100%;
     background-color: #e7eef1;
@@ -7,6 +9,6 @@ html {
         margin: 0;
         padding: 0;
         height: 100%;
-        font-family: "Lato", sans-serif;
+        font-family: "Oxygen", sans-serif;
     }
 }
