Container da página com campo CPF

--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
 <footer class="rodape">
-    <button class="btn nova-admissao">Inicar nova admissão</button>
+    <button class="btn nova-admissao">Iniciar nova admissão</button>
     <button class="btn dicas">Dicas para abertura da conta</button>
 </footer>
