--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -3,10 +3,32 @@
     <p class="p1">Se necessário, você poderá duplicar uma conta existente ou pausar e retornar este cadastro futuramente.</p>
     <p class="p2">Digite apenas os números (sem pontos ou traços).</p>
 
-    <form>
+    <form [formGroup]="form">
         <label for="cpf">CPF</label>
         <br>
-        <input type="text" name="cpf" id="cpf" placeholder="000.000.000-00">
-        <button type="submit">Consultar por CPF</button>
+        <input
+            formControlName="cpf"
+            type="text"
+            name="cpf"
+            id="cpf"
+            placeholder="000.000.000-00"
+            maxlength="11"
+            (keypress)="apenasNumeros($event)"
+            (blur)="validaQuantidade($event)">
+
+        <button
+            (click)="this.onSubmit()"
+            type="button">Consultar por CPF</button>
+
+        <div *ngIf="cpf.invalid && submitted">
+            <span class="erro" *ngIf="validaQtd">Campo possui apenas {{qtdDigitos}} de digitos é necessário ter 11</span><br>
+            <span class="erro" *ngIf="cpf.errors?.['required']">Campo CPF é obrigatório</span><br>
+            <span class="erro" *ngIf="cpfInvalido">CPF inválido. Digite um CPF válido</span><br>
+        </div>
     </form>
 </div>
+
+
+<!-- [disabled]="!this.myForm.value.cpf"
+     [ngClass]="this.myForm.value.cpf === '' ? 'disabled' : ''"
+-->
