Troca de nome card para cartão

--- a/src/app/componentes/cartao/cartao.component.html
+++ b/src/app/componentes/cartao/cartao.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-    <div class="card-espaco">
+<div class="cartao">
+    <div class="cartao-espaco">
         <h4 class="titulo">{{titulo}}</h4>
         <p class="subtitulo">{{subtitulo}}</p>
 
