--- a/src/app/componentes/cartao/cartao.component.scss
+++ b/src/app/componentes/cartao/cartao.component.scss
@@ -1,4 +1,4 @@
-.card {
+.cartao {
     background-color: #ffff;
     border-radius: 2px;
     border: 1px solid #d0d7d9;
@@ -7,7 +7,7 @@
     height: 13rem;
     margin-bottom: 15px;
 
-    .card-espaco {
+    .cartao-espaco {
         padding: 15px;
 
         .titulo {
