--- a/src/app/componentes/container/container.component.scss
+++ b/src/app/componentes/container/container.component.scss
@@ -48,7 +48,7 @@
         }
     }
 
-    .cards {
+    .cartoes {
         display: grid;
         margin-top: 30px;
         grid-template-columns: repeat(auto-fit, 300px);
